--- a/login.html
+++ b/login.html
@@ -1,142 +1,280 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>SB Admin 2 - Login</title>
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+      href="vendor/fontawesome-free/css/all.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+      rel="stylesheet"
+    />
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="css/sb-admin-2.min.css" rel="stylesheet" />
     <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
 
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-            apiKey: "AIzaSyDcty1VESKhlcbqD3MwJDYinPjtOmPFcus",
-            authDomain: "lineoa-65be9.firebaseapp.com",
-            projectId: "lineoa-65be9",
-            storageBucket: "lineoa-65be9.appspot.com",
-            messagingSenderId: "746449704094",
-            appId: "1:746449704094:web:97b4eebc59098aa258178f",
-            measurementId: "G-DJLV0HVX5X"
-        };
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyDcty1VESKhlcbqD3MwJDYinPjtOmPFcus",
+        authDomain: "lineoa-65be9.firebaseapp.com",
+        projectId: "lineoa-65be9",
+        storageBucket: "lineoa-65be9.appspot.com",
+        messagingSenderId: "746449704094",
+        appId: "1:746449704094:web:97b4eebc59098aa258178f",
+        measurementId: "G-DJLV0HVX5X",
+      };
 
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
     </script>
-        <script type="module">
-            import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-auth.js";
-            const auth = getAuth();
-            //WHEN THE BUTTON REGISTER IS CLICKED
-            document.querySelector('#btn-login').addEventListener('click', function () {
-                console.log("You try to login !!!");
-                let email = document.querySelector('#exampleInputEmail').value;
-                let password = document.querySelector('#exampleInputPassword').value;
-                signInWithEmailAndPassword(auth, email, password)
-                    .then((userCredential) => {
-                        // Signed in 
-                        const user = userCredential.user;
-                        console.log("Success : ", user);                    
-                        window.location.replace("tables.html");
-                    })
-                    .catch((error) => {
-                        const errorCode = error.code;
-                        const errorMessage = error.message;
-                        alert("Wrong username / password !!!");
-                    });
+    <script type="module">
+      //import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-auth.js";
+      import {
+        getAuth,
+        signInWithEmailAndPassword,
+        signInWithPopup,
+        signInWithRedirect,
+        getRedirectResult,
+        GoogleAuthProvider,
+        FacebookAuthProvider,
+      } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-auth.js";
+      const googleProvider = new GoogleAuthProvider();
+      const facebookProvider = new FacebookAuthProvider();
+      const auth = getAuth();
+      //WHEN THE BUTTON REGISTER IS CLICKED
+      document
+        .querySelector("#btn-login")
+        .addEventListener("click", function () {
+          console.log("You try to login !!!");
+          let email = document.querySelector("#exampleInputEmail").value;
+          let password = document.querySelector("#exampleInputPassword").value;
+          signInWithEmailAndPassword(auth, email, password)
+            .then((userCredential) => {
+              // Signed in
+              const user = userCredential.user;
+              console.log("Success : ", user);
+              window.location.replace("tables.html");
             })
-        </script>
-    
+            .catch((error) => {
+              const errorCode = error.code;
+              const errorMessage = error.message;
+              alert("Wrong username / password !!!");
+            });
+        });
+      //WHEN THE BUTTON REGISTER GOOGLE IS CLICKED
+      document
+        .querySelector("#btn-login-google")
+        .addEventListener("click", function () {
+          console.log("You try to login Google !!!");
+          signInWithPopup(auth, googleProvider)
+            .then((result) => {
+              // This gives you a Google Access Token. You can use it to access the Google API.
+              const credential =
+                GoogleAuthProvider.credentialFromResult(result);
+              const token = credential.accessToken;
+              // The signed-in user info.
+              const user = result.user;
+              console.log("Success : ", user);
+              window.location.replace("tables.html");
+              // ...
+            })
+            .catch((error) => {
+              // Handle Errors here.
+              const errorCode = error.code;
+              const errorMessage = error.message;
+              // The email of the user's account used.
+              const email = error.email;
+              // The AuthCredential type that was used.
+              const credential = GoogleAuthProvider.credentialFromError(error);
+              // ...
+            });
+        });
+      //WHEN THE BUTTON REGISTER GOOGLE REDIRECT IS CLICKED
+      document
+        .querySelector("#btn-login-google-redirect")
+        .addEventListener("click", function () {
+          console.log("You try to login Google Redirect !!!");
+          signInWithRedirect(auth, googleProvider);
+        });
+      getRedirectResult(auth)
+        .then((result) => {
+          // This gives you a Google Access Token. You can use it to access Google APIs.
+          const credential = GoogleAuthProvider.credentialFromResult(result);
+          const token = credential.accessToken;
+          // The signed-in user info.
+          const user = result.user;
+          console.log("Success : ", user);
+          window.location.replace("tables.html");
+        })
+        .catch((error) => {
+          // Handle Errors here.
+          const errorCode = error.code;
+          const errorMessage = error.message;
+          // The email of the user's account used.
+          const email = error.email;
+          // The AuthCredential type that was used.
+          const credential = GoogleAuthProvider.credentialFromError(error);
+          // ...
+        });
+      document
+        .querySelector("#btn-login-facebook")
+        .addEventListener("click", function () {
+          console.log("You try to login Facebook !!!");
+          signInWithPopup(auth, facebookProvider)
+            .then((result) => {
+              // This gives you a Facebook Access Token. You can use it to access the Facebook API.
+              const credential =
+                FacebookAuthProvider.credentialFromResult(result);
+              const token = credential.accessToken;
+              // The signed-in user info.
+              const user = result.user;
+              console.log("Success : ", user);
+              window.location.replace("tables.html");
+              // ...
+            })
+            .catch((error) => {
+              // Handle Errors here.
+              const errorCode = error.code;
+              const errorMessage = error.message;
+              // The email of the user's account used.
+              const email = error.email;
+              // The AuthCredential type that was used.
+              const credential =
+                FacebookAuthProvider.credentialFromError(error);
+              // ...
+            });
+        });
+    </script>
+  </head>
 
-</head>
-
-<body class="bg-gradient-primary">
-
+  <body class="bg-gradient-primary">
     <div class="container">
-
-        <!-- Outer Row -->
-        <div class="row justify-content-center">
-
-            <div class="col-xl-10 col-lg-12 col-md-9">
-
-                <div class="card o-hidden border-0 shadow-lg my-5">
-                    <div class="card-body p-0">
-                        <!-- Nested Row within Card Body -->
-                        <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                            <div class="col-lg-6">
-                                <div class="p-5">
-                                    <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                                    </div>
-                                    <form class="user">
-                                        <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address..."required>
-                                        </div>
-                                        <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Password">
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember
-                                                    Me</label>
-                                            </div>
-                                        </div>
-                                        <!--<a href="index.html" class="btn btn-primary btn-user btn-block">
+      <!-- Outer Row -->
+      <div class="row justify-content-center">
+        <div class="col-xl-10 col-lg-12 col-md-9">
+          <div class="card o-hidden border-0 shadow-lg my-5">
+            <div class="card-body p-0">
+              <!-- Nested Row within Card Body -->
+              <div class="row">
+                <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                <div class="col-lg-6">
+                  <div class="p-5">
+                    <div class="text-center">
+                      <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                    </div>
+                    <form class="user">
+                      <div class="form-group">
+                        <input
+                          type="email"
+                          class="form-control form-control-user"
+                          id="exampleInputEmail"
+                          aria-describedby="emailHelp"
+                          placeholder="Enter Email Address..."
+                          required
+                        />
+                      </div>
+                      <div class="form-group">
+                        <input
+                          type="password"
+                          class="form-control form-control-user"
+                          id="exampleInputPassword"
+                          placeholder="Password"
+                        />
+                      </div>
+                      <div class="form-group">
+                        <div class="custom-control custom-checkbox small">
+                          <input
+                            type="checkbox"
+                            class="custom-control-input"
+                            id="customCheck"
+                          />
+                          <label class="custom-control-label" for="customCheck"
+                            >Remember Me</label
+                          >
+                        </div>
+                      </div>
+                      <!--<a href="index.html" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </a>-->
 
-                                        <button type="button" class="btn btn-primary btn-user btn-block" id="btn-login">
-                                            Login
-                                        </button>
+                      <button
+                        type="button"
+                        class="btn btn-primary btn-user btn-block"
+                        id="btn-login"
+                      >
+                        Login
+                      </button>
 
-                                        <hr>
-                                        <a href="index.html" class="btn btn-google btn-user btn-block">
+                      <hr />
+                      <!--<a href="index.html" class="btn btn-google btn-user btn-block">
                                             <i class="fab fa-google fa-fw"></i> Login with Google
                                         </a>
                                         <a href="index.html" class="btn btn-facebook btn-user btn-block">
                                             <i class="fab fa-facebook-f fa-fw"></i> Login with Facebook
-                                        </a>
-                                    </form>
-                                    <hr>
-                                    <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Forgot Password?</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" href="register.html">Create an Account!</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                                        </a>-->
+                      <button
+                        type="button"
+                        class="btn btn-google btn-user btn-block"
+                        id="btn-login-google"
+                      >
+                        <i class="fab fa-google fa-fw"></i> Login with Google
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-google btn-user btn-block"
+                        id="btn-login-google-redirect"
+                      >
+                        <i class="fab fa-google fa-fw"></i> Login with Google
+                        Redirect
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-facebook btn-user btn-block"
+                        id="btn-login-facebook"
+                      >
+                        <i class="fab fa-facebook-f fa-fw"></i> Login with
+                        Facebook
+                      </button>
+                    </form>
+                    <hr />
+                    <div class="text-center">
+                      <a class="small" href="forgot-password.html"
+                        >Forgot Password?</a
+                      >
                     </div>
+                    <div class="text-center">
+                      <a class="small" href="register.html"
+                        >Create an Account!</a
+                      >
+                    </div>
+                  </div>
                 </div>
-
+              </div>
             </div>
-
+          </div>
         </div>
-
+      </div>
     </div>
 
     <!-- Bootstrap core JavaScript-->
@@ -148,7 +286,5 @@
 
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin-2.min.js"></script>
-
-</body>
-
+  </body>
 </html>
